Add sticky floating text, brainrot video with sound, and site legend
- Floating text and mini-cards in tall cards now use CSS position:sticky
- Brainrot video replaced with brainrot2.mp4, moved to massive card with captions
- Video autoplays with sound when visible via IntersectionObserver
- Changed feed overflow-x from hidden to clip to enable sticky positioning
- Updated massive card to 2,666,667 hours every 20 seconds
- Updated lifetime card to 80 years (700,800 hours)
- Added rich comparison text throughout massive card
- Added LEGEND.md documenting all site content and positions

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 
                 <span class="floating-text" data-position="0.20">You might think 320,000 hours sounds like a lot. It is. It's half a human lifetime. But we blow past it every 20 seconds without a thought.</span>
 
-                <div class="mini-card" data-position="0.24">
-                    <h3>640,000 Hours</h3>
-                    <p>One entire human lifetime — 73 years. Every waking moment, every sleeping one. Born, lived, died. That's how much time you've scrolled past.</p>
+                <div class="mini-card" data-position="0.26">
+                    <h3>700,800 Hours</h3>
+                    <p>One entire human lifetime — 80 years. Every waking moment, every sleeping one. Born, lived, died. That's how much time you've scrolled past.</p>
                 </div>
 
                 <span class="floating-text" data-position="0.28">One complete human life. Gone in a fraction of this scroll.</span>
@@ -156,7 +156,7 @@
 
                 <span class="floating-text" data-position="0.48">Just kidding. We're not even halfway. Keep scrolling.</span>
 
-                <span class="floating-text" data-position="0.53">The time represented by this card is consumed every 20 seconds. By the time you finish scrolling, it will have happened hundreds of times over.</span>
+                <span class="floating-text" data-position="0.53">The time represented by this card is consumed every 20 seconds. By the time you finish scrolling, it will have happened many times over.</span>
 
                 <span class="floating-text" data-position="0.58">No single app or platform created this problem. We did — collectively, one scroll at a time.</span>
 
@@ -176,7 +176,7 @@
                     <source src="media/brainrot2.mp4" type="video/mp4">
                 </video>
 
-                <span class="floating-text" data-position="0.96">The scroll is endless — your time isn't.</span>
+                <span class="floating-text" data-position="0.98">The scroll is endless — your time isn't.</span>
             </div>
         </div>
 
