--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 <span class="floating-text" data-position="0.16">Keep scrolling. We're not even close.</span>
 
-                <span class="floating-text" data-position="0.20">You might think 320,000 hours sounds like a lot. It is. It's half a human lifetime. But we blow past it every 20 seconds without a thought.</span>
+                <span class="floating-text" data-position="0.20">You might think 320,000 hours sounds like a lot. It is. It's half a human lifetime. But we blow way past it every 20 seconds without a thought.</span>
 
                 <div class="mini-card" data-position="0.26">
                     <h3>700,800 Hours</h3>
