Update lifetime card to 73,050 hrs, reorganize sources modal
- Lifetime card: 72,960 → 73,050 (2.5 × 365.25 × 80)
- Add "Report an error" button that copies email to clipboard
- Move Daily Phone Usage to bottom of sources
- Remove card entries (912, 73050, 2459490) from sources list

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             </div>
         </div>
 
-        <!-- Lifetime social media use per person: 72,960 hours (912 × 80 years) -->
-        <div class="milestone-card" data-hours="72960">
+        <!-- Lifetime social media use per person: 73,050 hours (2.5 × 365.25 × 80) -->
+        <div class="milestone-card" data-hours="73050">
             <div class="milestone-card-header">
-                <h2>72,960 Hours</h2>
+                <h2>73,050 Hours</h2>
                 <p>Lifetime social media use per person</p>
             </div>
             
@@ -204,6 +204,8 @@
 
         <div class="bottom-footer">
             <button class="sources-link" id="sourcesButton">Sources</button>
+            <span class="footer-divider">·</span>
+            <button class="sources-link" id="reportErrorButton">Report an error</button>
         </div>
     </div>
 
