Add 59,750 hrs walk-to-moon mini-card in lifetime card and source

--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
                 <span class="floating-text" data-position="0.2">That's 8.3 years of your life...</span>
                 <span class="floating-text" data-position="0.5">...spent scrolling through feeds</span>
                 <span class="floating-text" data-position="0.7">A decade of moments, lost to the algorithm</span>
+
+                <div class="mini-card" data-position="0.82">
+                    <h3>59,750 Hours</h3>
+                    <p>Time it would take to walk to the moon. One foot in front of the other, non-stop, for over 6 years.</p>
+                </div>
             </div>
         </div>
 
