Add gate section between intro and feed, offset scrollbar hours to start at feed

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         </div>
     </div>
 
+    <div class="gate-section"></div>
+
     <div class="feed">
         <div class="scale-row">
             <!-- Daily social media use: 2.5 hours -->
