Add gate section arrow, revert staggered reveal, increase gate height to 100vh

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         </div>
     </div>
 
-    <div class="gate-section"></div>
+    <div class="gate-section">
+        <div class="gate-arrow">↓</div>
+    </div>
 
     <div class="feed">
         <div class="scale-row">
