Add inspired-by credits for Wealth to Scale and US Debt Clock

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         </div>
     </div>
 
+    <div class="stats-explainer">
+        <div class="explainer-line"></div>
+        <p class="explainer-text">Each number represents lifetimes of social media use happening right now, around the world.</p>
+    </div>
+
     <div class="intro-screen">
         <div class="intro-content">
             <p class="intro-text">The average person spends <strong>2.5 hrs</strong> on social media every day.</p>
@@ -254,6 +259,11 @@
                 <div class="attribution-section">
                     <h3>S. Max Fan</h3>
                     <p>Renaissance person</p>
+                </div>
+                <div class="attribution-section">
+                    <h3>Inspired by</h3>
+                    <p><a href="https://eattherichtextformat.github.io/1-pixel-wealth/" target="_blank" rel="noopener noreferrer">Wealth, shown to scale</a></p>
+                    <p><a href="https://www.usdebtclock.org/" target="_blank" rel="noopener noreferrer">US Debt Clock</a></p>
                 </div>
             </div>
         </div>
