Update stats explainer text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="stats-explainer">
         <div class="explainer-line"></div>
-        <p class="explainer-text">Each number represents lifetimes of social media use happening right now, around the world.</p>
+        <p class="explainer-text">The world is spending lifetimes on social media every second. Here's the count.</p>
     </div>
 
     <div class="intro-screen">
