Add 'to scale' note below red squares and increase intro spacing

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
             </div>
         </div>
 
+        <div class="scale-note">
+            <div class="scale-note-line"></div>
+            <p class="scale-note-text">Everything on this site is to scale</p>
+        </div>
+
         <!-- Yearly social media use per person: ~912 hours -->
         <div class="milestone-card" data-hours="912">
             <div class="milestone-card-header">
