Add sourced mini cards at proportional positions with to-scale heights
- Add mini cards: Sistine Chapel (17,520h), Great Pyramid (175,200h),
  Voyager 1 (423,000h), Toy Story (800,000h) with verified sources
- Position all mini cards at correct hours/total ratio so they cluster
  in the first third of the card, reinforcing the scale
- Size mini cards proportionally to their parent card's hours
- Add Voyager 1 source and calculation to sources modal
- Remove Apollo 11 and ISS spacewalk cards

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <span class="floating-text" data-position="0.5">...spent scrolling through feeds</span>
                 <span class="floating-text" data-position="0.7">A decade of moments, lost to the algorithm</span>
 
-                <div class="mini-card" data-position="0.82">
+                <div class="mini-card" data-position="0.82" data-hours="59750">
                     <h3>59,750 Hours</h3>
                     <p>Time it would take to walk to the moon. One foot in front of the other, non-stop, for over 6 years.</p>
                 </div>
@@ -145,49 +145,63 @@
                 <p>Time spent on social media globally, every 10 seconds</p>
             </div>
             <div class="milestone-card-body">
-                <span class="floating-text" data-position="0.02">You're not alone in this scroll...</span>
+                <span class="floating-text" data-position="0.003">You're not alone in this scroll...</span>
 
-                <span class="floating-text" data-position="0.05">Every 10 seconds, humanity burns through 2.5 million hours on social media. This card represents that time, to scale.</span>
+                <div class="mini-card" data-position="0.007" data-hours="17520">
+                    <h3>17,520 Hours</h3>
+                    <p>Michelangelo painting the Sistine Chapel ceiling. Four years, 12 hours a day, contorted on scaffolding 60 feet up. A masterpiece for the ages — consumed in a fraction of a second of collective scrolling.</p>
+                </div>
 
-                <span class="floating-text" data-position="0.08">We rarely see time waste represented to scale. This is part of the reason we consistently fail to grasp just how much of our collective life is disappearing into feeds.</span>
+                <span class="floating-text" data-position="0.02">Every 10 seconds, humanity burns through 2.5 million hours on social media. This card represents that time, to scale.</span>
 
-                <div class="mini-card" data-position="0.12">
+                <span class="floating-text" data-position="0.04">We rarely see time waste represented to scale. This is part of the reason we consistently fail to grasp just how much of our collective life is disappearing into feeds.</span>
+
+                <div class="mini-card" data-position="0.071" data-hours="175200">
+                    <h3>175,200 Hours</h3>
+                    <p>Building the Great Pyramid of Giza. Twenty years, 20,000 workers, 2.3 million stone blocks. One of the greatest construction feats in human history — and we scroll past it in seconds.</p>
+                </div>
+
+                <div class="mini-card" data-position="0.13" data-hours="320000">
                     <h3>320,000 Hours</h3>
                     <p>Time it would take to read all of Wikipedia. Every word, every article. That's how far you've scrolled — and it's barely a fraction of what we spend in 10 seconds.</p>
                 </div>
 
-                <span class="floating-text" data-position="0.16">Keep scrolling. We're not even close.</span>
+                <div class="mini-card" data-position="0.172" data-hours="423000">
+                    <h3>~423,000 Hours</h3>
+                    <p>Voyager 1's flight time since 1977. Still transmitting from over 15 billion miles away, 48 years and counting. The farthest human-made object from Earth — and it wouldn't even fill a fifth of this card.</p>
+                </div>
 
-                <span class="floating-text" data-position="0.20">You might think 320,000 hours sounds like a lot. It is. It's half a human lifetime. But we blow way past it every 10 seconds without a thought.</span>
+                <span class="floating-text" data-position="0.22">Keep scrolling. We're not even close.</span>
 
-                <div class="mini-card" data-position="0.26">
+                <div class="mini-card" data-position="0.285" data-hours="700800">
                     <h3>700,800 Hours</h3>
                     <p>One entire human lifetime — 80 years. Every waking moment, every sleeping one. Born, lived, died. That's how much time you've scrolled past.</p>
                 </div>
 
-                <span class="floating-text" data-position="0.28">One complete human life. Gone in a fraction of this scroll.</span>
+                <div class="mini-card" data-position="0.325" data-hours="800000">
+                    <h3>800,000 Hours</h3>
+                    <p>Total render time for Toy Story — the first fully computer-animated feature film. 117 workstations, 114,240 frames, less than 30 seconds of film produced per day. Still not even a third of this card.</p>
+                </div>
 
-                <span class="floating-text" data-position="0.33">And we're not even a quarter of the way through what humanity spends in 10 seconds.</span>
+                <span class="floating-text" data-position="0.37">One complete human life. Gone in a fraction of this scroll.</span>
 
-                <span class="floating-text" data-position="0.38">Think about that. Everything you will ever experience — every joy, every heartbreak, every sunrise — fits in less than a quarter of this card.</span>
+                <span class="floating-text" data-position="0.42">And every single mini card you just passed — the Pyramids, Wikipedia, a human lifetime, Toy Story — all of them fit in the first third of this card.</span>
 
-                <span class="floating-text" data-position="0.43">OK, we're coming up on the end now.</span>
+                <span class="floating-text" data-position="0.47">OK, we're coming up on the end now.</span>
 
-                <span class="floating-text" data-position="0.48">Just kidding. We're not even halfway. Keep scrolling.</span>
+                <span class="floating-text" data-position="0.52">Just kidding. We're not even halfway. Keep scrolling.</span>
 
-                <span class="floating-text" data-position="0.53">The time represented by this card is consumed every 10 seconds. By the time you finish scrolling, it will have happened many times over.</span>
+                <span class="floating-text" data-position="0.57">The time represented by this card is consumed every 10 seconds. By the time you finish scrolling, it will have happened many times over.</span>
 
-                <span class="floating-text" data-position="0.58">No single app or platform created this problem. We did — collectively, one scroll at a time.</span>
+                <span class="floating-text" data-position="0.62">No single app or platform created this problem. We did — collectively, one scroll at a time.</span>
 
-                <span class="floating-text" data-position="0.63">2.5 million hours. That's 3.5 entire human lifetimes. Consumed. Every. 10. Seconds.</span>
+                <span class="floating-text" data-position="0.67">2.5 million hours. That's 3.5 entire human lifetimes. Consumed. Every. 10. Seconds.</span>
 
-                <span class="floating-text" data-position="0.68">If this time were given to a single person, they would live from the Stone Age to today — and still have lifetimes to spare.</span>
+                <span class="floating-text" data-position="0.72">Think about that. Everything you will ever experience — every joy, every heartbreak, every sunrise — fits in less than a third of this card.</span>
 
-                <span class="floating-text" data-position="0.73">We could read every Wikipedia article four times over. We could build monuments. We could learn languages, write novels, raise families.</span>
+                <span class="floating-text" data-position="0.77">Instead, we scroll.</span>
 
-                <span class="floating-text" data-position="0.78">Instead, we scroll.</span>
-
-                <span class="floating-text" data-position="0.83">This isn't about guilt. It's about scale. We simply cannot comprehend how much time we are giving away.</span>
+                <span class="floating-text" data-position="0.82">This isn't about guilt. It's about scale. We simply cannot comprehend how much time we are giving away.</span>
 
                 <span class="floating-text" data-position="0.86">You're almost at the end of this card. 10 more seconds just passed. Another 2.5 million hours, gone.</span>
 
