Add scrollbar hard cutoff at last card, remove Toy Story card, fix positions
- Progress bar clips to bottom of last milestone card as you scroll past
- Hide year labels and scale counter when bar fully collapses
- Remove Toy Story and Apollo 11 mini cards
- Update Sistine Chapel scaffolding height to 70 feet
- Remove duplicate floating text, update references

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                 <div class="mini-card" data-position="0.007" data-hours="17520">
                     <h3>17,520 Hours</h3>
-                    <p>Michelangelo painting the Sistine Chapel ceiling. Four years, 12 hours a day, contorted on scaffolding 60 feet up. A masterpiece for the ages — consumed in a fraction of a second of collective scrolling.</p>
+                    <p>Michelangelo painting the Sistine Chapel ceiling. Four years, 12 hours a day, contorted on scaffolding 70 feet up. A masterpiece for the ages — consumed in a fraction of a second of collective scrolling.</p>
                 </div>
 
                 <span class="floating-text" data-position="0.02">Every 10 seconds, humanity burns through 2.5 million hours on social media. This card represents that time, to scale.</span>
@@ -178,14 +178,7 @@
                     <p>One entire human lifetime — 80 years. Every waking moment, every sleeping one. Born, lived, died. That's how much time you've scrolled past.</p>
                 </div>
 
-                <div class="mini-card" data-position="0.325" data-hours="800000">
-                    <h3>800,000 Hours</h3>
-                    <p>Total render time for Toy Story — the first fully computer-animated feature film. 117 workstations, 114,240 frames, less than 30 seconds of film produced per day. Still not even a third of this card.</p>
-                </div>
-
-                <span class="floating-text" data-position="0.37">One complete human life. Gone in a fraction of this scroll.</span>
-
-                <span class="floating-text" data-position="0.42">And every single mini card you just passed — the Pyramids, Wikipedia, a human lifetime, Toy Story — all of them fit in the first third of this card.</span>
+                <span class="floating-text" data-position="0.37">And every single mini card you just passed — the Pyramids, Wikipedia, a human lifetime, Voyager 1 — all of them fit in the first third of this card.</span>
 
                 <span class="floating-text" data-position="0.47">OK, we're coming up on the end now.</span>
 
