Change 'Everything on this site is to scale' to 'Everything is to scale'

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <div class="scale-note">
             <div class="scale-note-line"></div>
-            <p class="scale-note-text">Everything on this site is to scale</p>
+            <p class="scale-note-text">Everything is to scale</p>
         </div>
 
         <!-- Yearly social media use per person: ~912 hours -->
