--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                     <p>Building the Great Pyramid of Giza. Twenty years, 20,000 workers, 2.3 million stone blocks. One of the greatest construction feats in human history — and we scroll past it in seconds.</p>
                 </div>
 
-                <div class="mini-card" data-position="0.13" data-hours="320000">
-                    <h3>320,000 Hours</h3>
+                <div class="mini-card" data-position="0.13" data-hours="340000">
+                    <h3>~340,000 Hours</h3>
                     <p>Time it would take to read all of Wikipedia. Every word, every article. That's how far you've scrolled — and it's barely a fraction of what we spend in 10 seconds.</p>
                 </div>
 
