--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
             </div>
         </div>
 
-        <!-- 2,459,490 hours - global social media usage every 10 seconds -->
-        <div class="milestone-card scale-card-massive" data-hours="2459490">
+        <!-- 1,736,111 hours - global social media usage every 10 seconds -->
+        <div class="milestone-card scale-card-massive" data-hours="1736111">
             <div class="milestone-card-header">
-                <h2>2,459,490 Hours</h2>
+                <h2>1,736,111 Hours</h2>
                 <p>Time spent on social media globally, every 10 seconds</p>
             </div>
             <div class="milestone-card-body">
@@ -152,7 +152,7 @@
                     <p>Michelangelo painting the Sistine Chapel ceiling. Four years, 12 hours a day, contorted on scaffolding 70 feet up. A masterpiece for the ages — consumed in a fraction of a second of collective scrolling.</p>
                 </div>
 
-                <span class="floating-text" data-position="0.02">Every 10 seconds, humanity burns through 2.5 million hours on social media. This card represents that time, to scale.</span>
+                <span class="floating-text" data-position="0.02">Every 10 seconds, humanity burns through 1.74 million hours on social media. This card represents that time, to scale.</span>
 
                 <span class="floating-text" data-position="0.04">We rarely see time waste represented to scale. This is part of the reason we consistently fail to grasp just how much of our collective life is disappearing into feeds.</span>
 
@@ -168,7 +168,7 @@
 
                 <div class="mini-card" data-position="0.172" data-hours="423000">
                     <h3>~423,000 Hours</h3>
-                    <p>Voyager 1's flight time since 1977. Still transmitting from over 15 billion miles away, 48 years and counting. The farthest human-made object from Earth — and it wouldn't even fill a fifth of this card.</p>
+                    <p>Voyager 1's flight time since 1977. Still transmitting from over 15 billion miles away, 48 years and counting. The farthest human-made object from Earth — and it wouldn't even fill a quarter of this card.</p>
                 </div>
 
                 <span class="floating-text" data-position="0.22">Keep scrolling. We're not even close.</span>
@@ -178,7 +178,7 @@
                     <p>One entire human lifetime — 80 years. Every waking moment, every sleeping one. Born, lived, died. That's how much time you've scrolled past.</p>
                 </div>
 
-                <span class="floating-text" data-position="0.37">And every single mini card you just passed — the Pyramids, Wikipedia, a human lifetime, Voyager 1 — all of them fit in the first third of this card.</span>
+                <span class="floating-text" data-position="0.37">And every single mini card you just passed — the Pyramids, Wikipedia, a human lifetime, Voyager 1 — together, they nearly fill this entire card.</span>
 
                 <span class="floating-text" data-position="0.47">OK, we're coming up on the end now.</span>
 
@@ -186,13 +186,13 @@
 
                 <span class="floating-text" data-position="0.57">The time represented by this card is consumed every 10 seconds. By the time you finish scrolling, it will have happened many times over.</span>
 
-                <span class="floating-text" data-position="0.65">2.5 million hours. That's 3.5 entire human lifetimes. Consumed. Every. 10. Seconds.</span>
+                <span class="floating-text" data-position="0.65">1.74 million hours. That's 2.5 entire human lifetimes. Consumed. Every. 10. Seconds.</span>
 
                 <span class="floating-text" data-position="0.75">Instead, we scroll.</span>
 
                 <span class="floating-text" data-position="0.82">This isn't about guilt. It's about scale. We simply cannot comprehend how much time we are giving away.</span>
 
-                <span class="floating-text" data-position="0.86">You're almost at the end of this card. 10 more seconds just passed. Another 2.5 million hours, gone.</span>
+                <span class="floating-text" data-position="0.86">You're almost at the end of this card. 10 more seconds just passed. Another 1.74 million hours, gone.</span>
 
                 <video id="brainrot-video" class="positioned-video" data-position="0.90" data-caption-top="Some brainrot for you..." data-caption-bottom="We haven't lost you yet, have we?" loop playsinline>
                     <source src="media/brainrot2.mp4" type="video/mp4">
