Add '1 life = 80 years of scrolling' label below stats count

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <div class="stats-explainer">
         <div class="explainer-line"></div>
         <p class="explainer-text">The world is spending lifetimes on social media every second. Here's the count.</p>
+        <p class="explainer-subtext">1 life = 80 years of scrolling</p>
     </div>
 
     <div class="intro-screen">
