Change 'Born, lived, died' to 'Birth, life, death'

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                 <div class="mini-card" data-position="0.285" data-hours="700800">
                     <h3>700,800 Hours</h3>
-                    <p>One entire human lifetime — 80 years. Every waking moment, every sleeping one. Born, lived, died. That's how much time you've scrolled past.</p>
+                    <p>One entire human lifetime — 80 years. Every waking moment, every sleeping one. Birth, life, death. That's how much time you've scrolled past.</p>
                 </div>
 
                 <span class="floating-text" data-position="0.37">And every single mini card you just passed — the Pyramids, Wikipedia, a human lifetime, Voyager 1 — together, they nearly fill this entire card.</span>
