Add video pause-at-end with replay button, move caption to floating text
Video no longer loops; pauses at the last frame. An ended event creates
a subtle circular replay button overlaid on the video. Pre-video text
is now a floating-text element at position 0.88 rather than a caption.
Also switches video source to brainrot3.mp4.

--- a/index.html
+++ b/index.html
@@ -203,15 +203,17 @@
 
                 <span class="floating-text" data-position="0.86">You're almost at the end of this card. 10 more seconds just passed. Another 1.74 million hours, gone.</span>
 
-                <video id="brainrot-video" class="positioned-video" data-position="0.90" data-caption-top="Some brainrot for you..." data-caption-bottom="We haven't lost you yet, have we?" loop playsinline>
-                    <source src="media/brainrot2.mp4" type="video/mp4">
+                <span class="floating-text" data-position="0.88">We haven't lost you yet, have we? Here's some brainrot for you...</span>
+
+                <video id="brainrot-video" class="positioned-video" data-position="0.90" data-caption-bottom="" playsinline>
+                    <source src="media/brainrot3.mp4" type="video/mp4">
                 </video>
 
                 <span class="floating-text" data-position="0.98">The scroll is endless — your time isn't.</span>
 
                 <div class="mini-card lives-card" data-position="0.993" id="livesMiniCard2">
                     <h3><span id="livesMiniCount2">0</span></h3>
-                    <p>lives (80 years worth) lost globally to scrolling since the website loaded</p>
+                    <p>lives (80 years worth) lost globally to scrolling since you opened this page</p>
                 </div>
             </div>
         </div>
