--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p style="position:absolute;top:60px;left:50%;transform:translateX(-50%);font-size:12px;color:#ffffff;opacity:0.5;z-index:9999;margin:0;">Note: This site is currently in an early stage of development</p>
+    <p style="position:absolute;top:60px;left:50%;transform:translateX(-50%);font-size:12px;color:#4a3e32;opacity:0.6;z-index:9999;margin:0;">Note: This site is currently in an early stage of development</p>
+    <button id="themeToggle" class="theme-toggle" aria-label="Toggle dark mode">
+        <span class="theme-toggle-track">
+            <span class="theme-toggle-thumb"></span>
+        </span>
+        <span class="theme-toggle-label"></span>
+    </button>
     <div class="progress-bar">
         <div class="progress-fill"></div>
         <div class="progress-scale">
