--- a/index.html
+++ b/index.html
@@ -137,16 +137,17 @@
             </div>
             
             <div class="milestone-card-body">
-                <span class="floating-text" data-position="0.27">That's 8.3 years of your life...</span>
+                <span class="floating-text" data-position="0.1">  </span>
 
-                <div class="mini-card lives-card" data-position="0.4" id="livesMiniCard1">
+                <span class="floating-text" data-position="0.3">That's 8.3 years of your life...</span>
+                <span class="floating-text" data-position="0.55">  </span>
+
+                <div class="mini-card lives-card" data-position="0.85" id="livesMiniCard1">
                     <h3><span id="livesMiniCount1">0</span></h3>
                     <p>lives (80 years worth) lost globally to scrolling since the website loaded</p>
                 </div>
 
-                <span class="floating-text" data-position="0.7">A decade of moments, lost to the algorithm</span>
-
-                <div class="mini-card" data-position="0.82" data-hours="59750">
+                <div class="mini-card" data-position="0.86" data-hours="59750">
                     <h3>59,750 Hours</h3>
                     <p>Time it would take to walk to the moon. One foot in front of the other, non-stop, for over 6 years.</p>
                 </div>
@@ -160,9 +161,11 @@
                 <p>Time spent on social media globally, every 10 seconds</p>
             </div>
             <div class="milestone-card-body">
-                <span class="floating-text" data-position="0.003">You're not alone in this scroll...</span>
+                <span class="floating-text" data-position="0.0"></span> <!-- To prevent early initialization-->
 
-                <div class="mini-card" data-position="0.007" data-hours="17520">
+                <span class="floating-text" data-position="0.004">You're not alone in this scroll...</span>
+
+                <div class="mini-card" data-position="0.008" data-hours="17520">
                     <h3>17,520 Hours</h3>
                     <p>Michelangelo painting the Sistine Chapel ceiling. Four years, 12 hours a day, contorted on scaffolding 70 feet up. A masterpiece for the ages — consumed in a fraction of a second of collective scrolling.</p>
                 </div>
