better dynamic mini card

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                 <span class="floating-text" data-position="0.55">  </span>
 
                 <div class="mini-card lives-card" data-position="0.85" id="livesMiniCard1">
-                    <h3><span id="livesMiniCount1">0</span></h3>
-                    <p>lives (80 years worth) lost globally to scrolling since the website loaded</p>
+                    <h3><span id="livesYears1">0</span></h3>
+                    <p>years (<span id="livesMiniCount1">0</span> lives) lost globally to scrolling since site loaded</p>
                 </div>
 
                 <div class="mini-card" data-position="0.86" data-hours="59750">
@@ -221,8 +221,8 @@
                 <span class="floating-text" data-position="0.98">The scroll is endless — your time isn't.</span>
 
                 <div class="mini-card lives-card" data-position="0.993" id="livesMiniCard2">
-                    <h3><span id="livesMiniCount2">0</span></h3>
-                    <p>lives (80 years worth) lost globally to scrolling since you opened this page</p>
+                    <h3><span id="livesYears2">0</span></h3>
+                    <p>years (<span id="livesMiniCount2">0</span> lives) lost globally to scrolling since you opened this page</p>
                 </div>
             </div>
         </div>
