--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </div>
 
     <div class="footer">
-        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visualization</a> by <a href="https://azariak.com" target="_blank">Azaria</a>, <a href="#" id="isaacLink">Isaac</a> & <a href="#" id="maxLink">Max</a>
+        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visualization</a> by <a href="#" id="azariaLink">Azaria</a>, <a href="#" id="isaacLink">Isaac</a> & <a href="#" id="maxLink">Max</a>
     </div>
 
     <!-- Sources Modal -->
@@ -298,6 +298,11 @@
                     <p><a href="https://eattherichtextformat.github.io/1-pixel-wealth/" target="_blank" rel="noopener noreferrer">Wealth, shown to scale</a></p>
                     <p><a href="https://www.usdebtclock.org/" target="_blank" rel="noopener noreferrer">US Debt Clock</a></p>
                 </div>
+            </div>
+            <div class="modal-footer">
+                <button class="sources-link" id="creditsSourcesBtn">Sources</button>
+                <span class="footer-divider">·</span>
+                <button class="sources-link" id="creditsReportErrorBtn">Report an error</button>
             </div>
         </div>
     </div>
