updated textual content

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <p>Building the Great Pyramid of Giza. Twenty years, 20,000 workers, 2.3 million stone blocks. One of the greatest construction feats in human history — and we scroll past it in seconds.</p>
                 </div>
 
-                <div class="mini-card" data-position="0.13" data-hours="340000">
+                <div class="mini-card" data-position="0.10" data-hours="340000">
                     <h3>~340,000 Hours</h3>
                     <p>Time it would take to read all of Wikipedia. Every word, every article. That's how far you've scrolled — and it's barely a fraction of what we spend in 10 seconds.</p>
                 </div>
@@ -206,9 +206,9 @@
 
                 <span class="floating-text" data-position="0.65">1.74 million hours. That's 2.5 entire human lifetimes. Consumed. Every. 10. Seconds.</span>
 
-                <span class="floating-text" data-position="0.75">Instead, we scroll.</span>
+                <span class="floating-text" data-position="0.73">Instead, we scroll.</span>
 
-                <span class="floating-text" data-position="0.82">This isn't about guilt. It's about scale. We simply cannot comprehend how much time we are giving away.</span>
+                <span class="floating-text" data-position="0.82">Every scroll teaches the algorithm how to keep you scrolling. The next feed won't be curated — it'll be synthesised to be impossible to stop.</span>
 
                 <span class="floating-text" data-position="0.86">You're almost at the end of this card. 10 more seconds just passed. Another 1.74 million hours, gone.</span>
 
