--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
 
                 <span class="floating-text" data-position="0.65">1.74 million hours. That's 2.5 entire human lifetimes. Consumed. Every. 10. Seconds.</span>
 
-                <span class="floating-text" data-position="0.73">Instead, we scroll.</span>
+                <span class="floating-text" data-position="0.73">Instead of living, we scroll.</span>
 
                 <span class="floating-text" data-position="0.82">Every scroll teaches the algorithm how to keep you scrolling. The next feed won't be curated — it'll be synthesised to be impossible to stop.</span>
 
-                <span class="floating-text" data-position="0.86">You're almost at the end of this card. 10 more seconds just passed. Another 1.74 million hours, gone.</span>
+                <span class="floating-text" data-position="0.86">You're almost at the end of this card. Another 10 seconds just passed. Another 1.74 million hours, gone.</span>
 
                 <span class="floating-text" data-position="0.88">We haven't lost you yet, have we? Here's some brainrot for you...</span>
 
