tweak scrollbar label: start later and show days unit always

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                 <div class="mini-card" data-position="0.008" data-hours="17520">
                     <h3>17,520 Hours</h3>
-                    <p>Michelangelo painting the Sistine Chapel ceiling. Four years, 12 hours a day, contorted on scaffolding 70 feet up. A masterpiece for the ages — consumed in a fraction of a second of collective scrolling.</p>
+                    <p>Michelangelo painting the Sistine Chapel ceiling. Four years, contorted, 70 feet in the air. A masterpiece — consumed in a fraction of a second of collective scrolling.</p>
                 </div>
 
                 <span class="floating-text" data-position="0.02">Every 10 seconds, humanity burns through 1.74 million hours on social media. This card represents that time, to scale.</span>
