--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </div>
 
     <div class="footer">
-        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visualization</a> by <a href="#" id="azariaLink">Azaria</a>, <a href="#" id="isaacLink">Isaac</a> & <a href="#" id="maxLink">Max</a>
+        A <a href="https://github.com/azariak/SocialMediaToScale" target="_blank">visualization</a> by <a href="#" id="azariaLink">Azaria</a>, <a href="#" id="isaacLink">Isaac</a> & <a href="#" id="maxLink">Friends</a>
     </div>
 
     <!-- Sources Modal -->
@@ -288,6 +288,10 @@
                 <div class="attribution-section">
                     <h3>Isaac Mansell</h3>
                     <p>👑-ing</p>
+                </div>
+                <div class="attribution-section">
+                    <h3>Yossi Blumenfeld</h3>
+                    <p></p>
                 </div>
                 <div class="attribution-section">
                     <h3>S. Max Fan</h3>
